--- a/src/storybook/stand-alone-documentaion/motion/motion.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/motion/motion.stories.mdx
@@ -8,16 +8,15 @@ import { EasingOverviews } from "./easing-overviews/easing-overviews";
 import { EasingTokenTable } from "./easing-token-table/easing-token-table";
 import { AnimationTypes } from "./animation-types/animation-types";
 import {
-  EasingDo,
-  EasingDont,
   ConsistencyDo,
   ConsistencyDont,
-  SimplicityDo,
-  SimplicityDont,
   DontDelayDo,
-  DontDelayDont
+  DontDelayDont,
+  EasingDo,
+  EasingDont,
+  SimplicityDo,
+  SimplicityDont
 } from "./assets";
-import { ComingSoon } from "../../components/coming-soon/coming-soon";
 
 <Meta title="Foundations/Motion" />
 
