--- a/src/components/ListItem/__stories__/ListItem.stories.mdx
+++ b/src/components/ListItem/__stories__/ListItem.stories.mdx
@@ -1,6 +1,6 @@
 import ListItem from "../ListItem";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook/functions/create-component-story";
+import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
 import Send from "../../Icon/Icons/components/Send";
 import ListItemIcon from "../../ListItemIcon/ListItemIcon";
 
