--- a/src/components/VirtualizedGrid/__stories__/VirtualizedGrid.stories.mdx
+++ b/src/components/VirtualizedGrid/__stories__/VirtualizedGrid.stories.mdx
@@ -1,8 +1,8 @@
 import { useCallback, useMemo, useState } from "react";
 import VirtualizedGrid from "../VirtualizedGrid";
 import Button from "../../Button/Button";
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
-import { createComponentTemplate } from "../../../storybook/functions/create-component-story";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
+import { UsageGuidelines } from "../../../storybook";
 import { generateItems, itemRenderer } from "./VirtualizedGrid.stories";
 
 <Meta title="Navigation/VirtualizedGrid" component={VirtualizedGrid} />
@@ -88,7 +88,6 @@ Under the hood we are using - [react-window](https://github.com/bvaughn/react-wi
         display: "flex",
         alignItems: "center"
       },
-      wrapperId: "Knobs",
       itemsCount: 100
     }}
   >
@@ -98,7 +97,7 @@ Under the hood we are using - [react-window](https://github.com/bvaughn/react-wi
 
 ## Props
 
-<ArgsTable of={VirtualizedGrid} />
+<ArgsTable story="Overview" />
 
 ## Usage
 
