--- a/src/components/VirtualizedList/__stories__/VirtualizedList.stories.mdx
+++ b/src/components/VirtualizedList/__stories__/VirtualizedList.stories.mdx
@@ -1,9 +1,10 @@
 import VirtualizedList from "../VirtualizedList";
-import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
+import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { generateItems } from "./virtualizedList.components";
 import { useCallback } from "react";
-import styles from "./virtualizedList.module.scss";
 import { Flex } from "../../";
+import styles from "./virtualizedList.module.scss";
+import { Tip, UsageGuidelines } from "../../../storybook";
 
 <Meta title="Navigation/VirtualizedList" component={VirtualizedList} />
 
@@ -56,7 +57,7 @@ export const virtualizedListTemplate = args => {
           alignItems: "center"
         }}
       >
-        <div style={{ width: 200, height: "100%", width: "100%" }}>
+        <div style={{ height: "100%", width: "100%" }}>
           <h3>Horizontal List</h3>
           <VirtualizedList
             {...args}
@@ -94,7 +95,7 @@ Under the hood we are using - [react-window](https://github.com/bvaughn/react-wi
 
 ## Props
 
-<ArgsTable of={VirtualizedList} />
+<ArgsTable story="Overview" />
 
 ## Usage
 
