--- a/src/components/Accordion/Accordion/__stories__/accordion.stories.mdx
+++ b/src/components/Accordion/Accordion/__stories__/accordion.stories.mdx
@@ -1,7 +1,7 @@
 import Accordion from "../Accordion";
 import AccordionItem from "../../AccordionItem/AccordionItem";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import Checkbox from "../../../Checkbox/Checkbox.js";
+import Checkbox from "../../../Checkbox/Checkbox";
 import {
   BREADCRUBMS,
   STEPPER,
