--- a/src/components/Icon/__stories__/Icon.stories.mdx
+++ b/src/components/Icon/__stories__/Icon.stories.mdx
@@ -100,16 +100,10 @@ As a default the icon will inherit the color of it's parent container
 
 ## Icons List
 
-Each icon is exported as a react component under the `monday-ui-react-core/dist/icons` folder or exported under one bundle `monday-ui-react-core/icons`
-
-Just import the icon by it's name as shown in the list below
+Icons are exported by name from `monday-ui-react-core/icons`:
 
 ```javascript
 import { DoubleCheck } from "monday-ui-react-core/icons";
-```
-
-```javascript
-import DoubleCheck from "monday-ui-react-core/dist/icons/DoubleCheck";
 ```
 
 <Canvas>
