AvatarGroup Typescript migration (#931)
* AvatarGroup TS-migration

* Remove undeleted propTypes

* Merge branch 'master' into ts-migration-avatar-group

# Conflicts:
#	webpack/published-ts-components.js

* Fix some eslint errors

* AvatarGroupCounterTooltipHelper - ts-migration

* Fix eslint Function type error

* Fix eslint @typescript-eslint/no-unused-vars error

* Fix Ref type related errors

* Fix Ref type related errors - 2

* Avatar enums renamed to be in singular form, some TODOs added, AvatarMenuItem fields assigned via Object.assign

* TooltipContent type fix

* Style type fix - CSSProperties

* Avatar: remove defaultProps, enums in the interface

* Avatar: enums in the interface - fix

* AvatarContent - remove defaultProps

* useListenFocusTriggers - make params optional

* AvatarGroupCounterTooltipContainer: fix children type and return type

* Remove IconButton from published-js-components

* Fix Avatar.types, Avatar.sizes and it's usages

* Fix defaultProps: Avatar, AvatarBadge

* Update snapshots

* Fix AvatarGroup & VirtualizedList types + fix PR notes

--- a/src/components/AvatarGroup/__stories__/AvatarGroup.stories.mdx
+++ b/src/components/AvatarGroup/__stories__/AvatarGroup.stories.mdx
@@ -63,7 +63,7 @@ Use this component if you need to stack avatars as a group.
 
 ## Props
 
-<ArgsTable of={AvatarGroup} />
+<ArgsTable story="Overview" />
 
 ## Usage
 
@@ -270,7 +270,7 @@ Otherwise, avatars will be displayed in a Tooltip with no item's navigation.
   <Story name="Hover vs Clickable">
     {() => {
       const [lastClickedAvatarId, setLastClickedAvatarId] = useState("-");
-      const avatarOnClick = useCallback(avatarId => {
+      const avatarOnClick = useCallback((_event, avatarId) => {
         setLastClickedAvatarId(avatarId);
       }, []);
       const avatarsProps = [
@@ -280,7 +280,7 @@ Otherwise, avatars will be displayed in a Tooltip with no item's navigation.
       ];
       const getDummyAvatarsProps = useCallback(multiplier => {
         let result = [];
-        for (let i = 0; i < multiplier; ++i) {
+        for (let i = 0; i <= multiplier; ++i) {
           result = result.concat(avatarsProps);
         }
         return result;
@@ -293,7 +293,7 @@ Otherwise, avatars will be displayed in a Tooltip with no item's navigation.
               max={3}
               counterTooltipCustomProps={{ position: Tooltip.positions.BOTTOM }}
             >
-              {getDummyAvatarsProps(4).map(avatarProps => (
+              {getDummyAvatarsProps(3).map(avatarProps => (
                 <Avatar {...avatarProps} />
               ))}
             </AvatarGroup>
@@ -301,8 +301,8 @@ Otherwise, avatars will be displayed in a Tooltip with no item's navigation.
           <StoryDescription description="Counter click" vertical align={Flex.align.START}>
             <Flex>
               <AvatarGroup size={Avatar.sizes.LARGE} max={3}>
-                {getDummyAvatarsProps(4).map((avatarProps, index) => (
-                  <Avatar {...avatarProps} onClick={avatarOnClick} id={`${index}`} />
+                {getDummyAvatarsProps(3).map((avatarProps, index) => (
+                  <Avatar {...avatarProps} onClick={avatarOnClick} id={index} />
                 ))}
               </AvatarGroup>
               <div className={styles.lastClickedAvatarIdText}>Last clicked avatar's id: {lastClickedAvatarId}</div>
