--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -235,17 +235,28 @@ The Dropdown component supports multiple options selection in two different stat
         []
       );
       return (
-        <StoryDescription vertical>
-          <div>
-            <Dropdown
-              defaultValue={[optionsAvatar[0]]}
-              options={optionsAvatar}
-              multi
-              multiline
-              className="dropdown-stories-styles_with-chips"
-            />
-          </div>
-        </StoryDescription>
+          <Flex gap={Flex.gaps.SMALL}>
+              <StoryDescription vertical description="Single value">
+                  <div>
+                      <Dropdown
+                          defaultValue={[optionsAvatar[0]]}
+                          options={optionsAvatar}
+                          className="dropdown-stories-styles_with-chips"
+                      />
+                  </div>
+              </StoryDescription>
+              <StoryDescription vertical description="Multiple values">
+                  <div>
+                      <Dropdown
+                          defaultValue={[optionsAvatar[0]]}
+                          options={optionsAvatar}
+                          multi
+                          multiline
+                          className="dropdown-stories-styles_with-chips"
+                      />
+                  </div>
+              </StoryDescription>
+          </Flex>
       );
     }}
   </Story>
@@ -272,17 +283,28 @@ The Dropdown component supports multiple options selection in two different stat
         []
       );
       return (
-        <StoryDescription vertical>
-          <div>
-            <Dropdown
-              defaultValue={[optionsIcons[0]]}
-              options={optionsIcons}
-              multi
-              multiline
-              className="dropdown-stories-styles_with-chips"
-            />
-          </div>
-        </StoryDescription>
+        <Flex gap={Flex.gaps.SMALL}>
+            <StoryDescription vertical description="Single value">
+                <div>
+                    <Dropdown
+                        defaultValue={[optionsIcons[0]]}
+                        options={optionsIcons}
+                        className="dropdown-stories-styles_with-chips"
+                    />
+                </div>
+            </StoryDescription>
+            <StoryDescription vertical description="Multiple values">
+                <div>
+                    <Dropdown
+                        defaultValue={[optionsIcons[0]]}
+                        options={optionsIcons}
+                        multi
+                        multiline
+                        className="dropdown-stories-styles_with-chips"
+                    />
+                </div>
+            </StoryDescription>
+        </Flex>
       );
     }}
   </Story>
