TS-migration: Tipseen + some constants usage refactoring

--- a/src/components/Steps/__stories__/steps.stories.mdx
+++ b/src/components/Steps/__stories__/steps.stories.mdx
@@ -1,7 +1,7 @@
 import Steps from "../Steps";
 import { useMemo } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
-import Tipseen from "../../Tipseen/Tipseen.jsx";
+import Tipseen from "../../Tipseen/Tipseen.tsx";
 import TipseenWizard from "../../Tipseen/TipseenWizard";
 import { modifiers } from "./helpers.js";
 import { BREADCRUBMS, TABS, WIZARD } from "../../../storybook/components/related-components/component-description-map";
