--- a/src/components/Tipseen/__stories__/tipseen.stories.mdx
+++ b/src/components/Tipseen/__stories__/tipseen.stories.mdx
@@ -58,7 +58,7 @@ Tipseen is an virtual unboxing experience that helps users get started with the 
 </Canvas>
 
 ## Props
-<ArgsTable of={ Tipseen } />
+<ArgsTable story="Overview" />
 
 ## Usage
 <UsageGuidelines guidelines={[
