--- a/src/components/RadioButton/__stories__/radioButton.stories.mdx
+++ b/src/components/RadioButton/__stories__/radioButton.stories.mdx
@@ -70,7 +70,7 @@ Radio buttons have 3 states: regular, selected, and disabled.
   <Story name="States">
     <RadioButton text="Regular" />
     <RadioButton text="Selected" checked />
-    <RadioButton text="Disabled" disabled />
+    <RadioButton text="Disabled" disabled disabledReason="Disabled reason" />
     <RadioButton text="Disabled" checked disabled />
   </Story>
 </Canvas>
