TS-migration: Flex

--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -1,5 +1,5 @@
 import Dropdown from "../Dropdown";
-import {useCallback, useMemo, useRef, useState} from "react";
+import { useCallback, useMemo, useRef, useState } from "react";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { createStoryMetaSettings, Link } from "../../../storybook";
 import {
@@ -14,10 +14,10 @@ import person3 from "./assets/person3.png";
 import person2 from "./assets/person2.png";
 import Avatar from "../../Avatar/Avatar";
 import { OptionRenderer } from "./OptionRenderer.js";
-import Flex from "../../../components/Flex/Flex";
+import Flex from "../../Flex/Flex";
 import { StoryDescription } from "../../../storybook/components/story-description/story-description";
 import { Attach, Email } from "../../Icon/Icons";
-import {DialogContentContainer} from "../../index";
+import { DialogContentContainer } from "../../index";
 import Dialog from "../../Dialog/Dialog";
 import Button from "../../Button/Button";
 import "./dropdown.stories.scss";
