--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -251,6 +251,7 @@ The Dropdown component supports multiple options selection in two different stat
                           defaultValue={[optionsAvatar[0]]}
                           options={optionsAvatar}
                           multi
+                          multiline
                           className="dropdown-stories-styles_with-chips"
                       />
                   </div>
