Fix dropdown disabled story options types

--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -128,9 +128,9 @@ There are three sizes available: Small, Medium, and Large
     {() => {
       const options = useMemo(
         () => [
-          { value: 1, label: "Option 1" },
-          { value: 2, label: "Option 2" },
-          { value: 3, label: "Option 3" }
+          { value: "1", label: "Option 1" },
+          { value: "2", label: "Option 2" },
+          { value: "3", label: "Option 3" }
         ],
         []
       );
